# ANCHOR-Temp

./: .gitignore  CMakeLists.txt  Makefile  README.md  data_sources.lock.json  pyproject.toml  requirements-preprocess.txt  run_all_lite.sh  run_all_mid.sh
configs/: alacarte.default.json  experiments.json  machine.example.json  machine.json  real_data.json
cpp/app/: benchmark_main.cpp  sha256.cpp  sha256.hpp  workload.cpp  workload.hpp
cpp/include/anchor/: algorithms.hpp  anchor.hpp  anchor_core.hpp  fenwick.hpp  node_range_tree.hpp  random.hpp  range_query.hpp  range_tree.hpp  types.hpp
cpp/src/: anchor.cpp
cpp/tests/: test_core.cpp
data/workloads/: validation.bin.manifest.json
docs/: IMPLEMENTATION_DECISIONS.md  WORKLOAD_FORMAT.md
docs/spec/: Alacarte.md  Main.md  RealDataset.md  Setup.md
python/anchor_exp/: __init__.py  aggregate.py  alacarte.py  environment.py  experiments.py  hf_real.py  plotting.py  protocol.py  stable_hash.py  validation.py  workload.py
python/anchor_exp/cli/: __init__.py  aggregate_results.py  capture_machine.py  generate_synthetic.py  inspect_workload.py  plot_results.py  prepare_real.py  prepare_synthetic_suite.py  run_suite.py  validate_build.py
python/anchor_exp/preprocess/: __init__.py  common.py
python/tests/: test_alacarte.py  test_data_common.py  test_preprocess.py  test_procfs_monitor.py  test_protocol.py  test_validation.py  test_workload.py
scripts/: run_procfs.py
scripts/data/: prepare_real_data.sh
